update product color list

--- a/src/index.html
+++ b/src/index.html
@@ -158,12 +158,12 @@
                           </a>
                           <div class="product__row">
                             <p class="product__price">руб 2999</p>
-                            <button class="product__btn-favorite"
+                            <button class="product__btn-favorite product__btn-favorite_active"
                               aria-label="Добавить в избранное"></button>
                           </div>
                           <ul class="product__color-list">
-                            <li class="product__color-item color-item_check">
-                              <div class="color color_red"></div>
+                            <li class="product__color-item">
+                              <div class="color color_red color_check"></div>
                             </li>
                             <li class="product__color-item">
                               <div class="color color_white"></div>
@@ -188,8 +188,8 @@
                               aria-label="Добавить в избранное"></button>
                           </div>
                           <ul class="product__color-list">
-                            <li class="product__color-item color-item_check">
-                              <div class="color color_red"></div>
+                            <li class="product__color-item">
+                              <div class="color color_red color_check"></div>
                             </li>
                             <li class="product__color-item">
                               <div class="color color_white"></div>
@@ -214,8 +214,8 @@
                               aria-label="Добавить в избранное"></button>
                           </div>
                           <ul class="product__color-list">
-                            <li class="product__color-item color-item_check">
-                              <div class="color color_red"></div>
+                            <li class="product__color-item">
+                              <div class="color color_red color_check"></div>
                             </li>
                             <li class="product__color-item">
                               <div class="color color_white"></div>
@@ -240,8 +240,8 @@
                               aria-label="Добавить в избранное"></button>
                           </div>
                           <ul class="product__color-list">
-                            <li class="product__color-item color-item_check">
-                              <div class="color color_red"></div>
+                            <li class="product__color-item">
+                              <div class="color color_red color_check"></div>
                             </li>
                             <li class="product__color-item">
                               <div class="color color_white"></div>
@@ -266,8 +266,8 @@
                               aria-label="Добавить в избранное"></button>
                           </div>
                           <ul class="product__color-list">
-                            <li class="product__color-item color-item_check">
-                              <div class="color color_red"></div>
+                            <li class="product__color-item">
+                              <div class="color color_red color_check"></div>
                             </li>
                             <li class="product__color-item">
                               <div class="color color_white"></div>
@@ -288,12 +288,12 @@
                           </a>
                           <div class="product__row">
                             <p class="product__price">руб 2999</p>
-                            <button class="product__btn-favorite"
+                            <button class="product__btn-favorite "
                               aria-label="Добавить в избранное"></button>
                           </div>
                           <ul class="product__color-list">
-                            <li class="product__color-item color-item_check">
-                              <div class="color color_red"></div>
+                            <li class="product__color-item">
+                              <div class="color color_red color_check"></div>
                             </li>
                             <li class="product__color-item">
                               <div class="color color_white"></div>
@@ -345,7 +345,7 @@
                     <div class="footer__item footer__item_social footer-social">
                       <h2 class="footer__title footer-social__title">Связаться с
                         нами</h2>
-                      <p class="footer__title footer-social__subtitle">Контакты
+                      <p class="footer__subtitle footer-social__subtitle">Контакты
                         и адреса магазинов</p>
                       <ul class="footer-social__list">
                         <li class="footer-social__item">
